--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,7 @@ h1, h2, h3, h4, h5, p, a, span {
 img.placeholder {
     min-width: 100%;
     min-height: 100%;
+    max-height: 200px;
     background-size: 100%;
     background-repeat: no-repeat;
 }
